创建create指令 配置模板地址

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "bin": {
-    "perfect": "index.js"
+    "well": "index.js"
   },
   "license": "MIT",
   "dependencies": {
