--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^9.3.0",
-    "download-git-repo": "^3.0.2"
+    "download-git-repo": "^3.0.2",
+    "ejs": "^3.1.8",
+    "open": "^8.4.0",
+    "progress": "^2.0.3"
   }
 }
