--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cil",
+  "name": "welldone-cil",
   "version": "1.0.0",
   "main": "index.js",
   "bin": {
@@ -11,6 +11,7 @@
     "commander": "^9.3.0",
     "download-git-repo": "^3.0.2",
     "ejs": "^3.1.8",
+    "figlet": "^1.5.2",
     "open": "^8.4.0",
     "progress": "^2.0.3"
   }
