--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "download-git-repo": "^3.0.2",
     "ejs": "^3.1.8",
     "figlet": "^1.5.2",
+    "inquirer": "8.0.0",
     "open": "^8.4.0",
     "progress": "^2.0.3"
   }
